add indexer; update dependencies