@@ -45,6 +45,7 @@ sourceSets.main.resources {
 configurations {
     all*.exclude group: 'org.slf4j', module: "slf4j-log4j12"
     all*.exclude group: 'log4j', module: "log4j"
+    all*.exclude group: 'log4j2', module: "log4j2"
     implementation.setCanBeResolved(true)
 }
 
@@ -65,7 +66,7 @@ dependencies {
 
     implementation "com.google.code.gson:gson:2.8.1"
 
-    implementation "io.dropwizard:dropwizard-core:1.3.29"
+    /*implementation "io.dropwizard:dropwizard-core:1.3.29"
     implementation "io.dropwizard:dropwizard-assets:1.3.29"
     implementation "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.2"
     implementation "io.dropwizard:dropwizard-testing:1.3.29"
@@ -73,11 +74,29 @@ dependencies {
     implementation "io.dropwizard:dropwizard-client:1.3.29"
     implementation "io.dropwizard:dropwizard-auth:1.3.29"
     implementation "io.dropwizard.metrics:metrics-core:4.0.5"
-    implementation "io.dropwizard.metrics:metrics-servlets:4.0.5"
+    implementation "io.dropwizard.metrics:metrics-servlets:4.0.5"*/
+
+    //Dropwizard
+    implementation 'ru.vyarus:dropwizard-guicey:7.0.0'
+
+    implementation 'io.dropwizard:dropwizard-bom:4.0.0'
+    implementation 'io.dropwizard:dropwizard-core:4.0.0'
+    implementation 'io.dropwizard:dropwizard-assets:4.0.0'
+    implementation 'io.dropwizard:dropwizard-testing:4.0.0'
+    implementation 'io.dropwizard.modules:dropwizard-testing-junit4:4.0.0'
+    implementation 'io.dropwizard:dropwizard-forms:4.0.0'
+    implementation 'io.dropwizard:dropwizard-client:4.0.0'
+    implementation 'io.dropwizard:dropwizard-auth:4.0.0'
+    implementation 'io.dropwizard.metrics:metrics-core:4.2.22'
+    implementation 'io.dropwizard.metrics:metrics-servlets:4.2.22'
+
+    implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+    //implementation "javax.activation:activation:1.1.1"
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
-    implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.8.2'
+    //implementation 'ch.qos.logback:logback-classic:1.3.1'
+    //implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.8.2'
 
     implementation "com.rockymadden.stringmetric:stringmetric-core_2.10:0.27.3"
 
@@ -90,6 +109,8 @@ dependencies {
     implementation 'org.xerial.snappy:snappy-java:1.1.7.2'
 
     implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.14.1'
+    implementation 'co.elastic.clients:elasticsearch-java:8.12.1'
+    implementation group: 'org.apache.solr', name: 'solr-solrj', version: '9.5.0'
 
 //    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
     implementation 'org.apache.commons:commons-collections4:4.1'
@@ -99,9 +120,14 @@ dependencies {
 
     implementation group: 'org.tukaani', name: 'xz', version: '1.8'
 
-    implementation "com.fasterxml.jackson.core:jackson-core:2.9.10"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.9.10"
-    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.9.10"
+    /*implementation "com.fasterxml.jackson.core:jackson-core:2.12.3"
+    //implementation "com.fasterxml.jackson.core:jackson-databind:2.9.10"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.12.3"*/
+    implementation "com.fasterxml.jackson.core:jackson-core:2.14.3"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.14.3"
+    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.14.3"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.3"
 
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.0'
 }
@@ -213,6 +239,17 @@ task istex(dependsOn: 'classes', type: JavaExec, group: 'data') {
     main = 'com.scienceminer.glutton.web.LookupServiceApplication'
     classpath = sourceSets.main.runtimeClasspath
     args 'istex', getArg('input', ''), getArg('config', 'config/glutton.yml') 
+    if(JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.text=ALL-UNNAMED", "--add-opens", "java.base/java.net=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.math=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
+    } else {
+        jvmArgs '-Xmx3072m'
+    }
+}
+
+task index(dependsOn: 'classes', type: JavaExec, group: 'search') {
+    main = 'com.scienceminer.glutton.web.LookupServiceApplication'
+    classpath = sourceSets.main.runtimeClasspath
+    args 'index', getArg('config', 'config/glutton.yml') 
     if(JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
         jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.text=ALL-UNNAMED", "--add-opens", "java.base/java.net=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.math=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
     } else {
